@@ -300,3 +300,4 @@ Revision	Version Updated		Log Message
 278		C++			Parse country data with the parser instead of ad-hoc. Add a missing linebreak to output.
 279		C++			Literacy
 280		C++			Initialize variable in log.cpp
+281		C++			No longer log country mappings twice.
